--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
   --rgb-highlight: 4, 217, 255;
   --highlight: var(--text-color);
   --background: #000900;
-  --text-color: #D4FFDF;
+  --text-color: #ffffff;
   --close-button: var(--dnd-color) !important;
   --online-color: #39ff14;
   --afk-color: #FFFF33;
